--- a/client/src/css/profile.css
+++ b/client/src/css/profile.css
@@ -119,7 +119,7 @@
 }
 
 .profile-card th {
-    width: 130px;
+    width: 40px;
     text-align: left;
     color: var(--primary-color);
     font-weight: 500;
@@ -133,7 +133,7 @@
     overflow: hidden;
     color: #939393;
     font-size: 14px;
-    padding: 10px 10px 10px 100px;
+    padding: 10px 16px;
     line-height: 1.8;
 }
 
