visitor active page-search bar and edit layout

--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -19,6 +19,7 @@ html, body {
   }
 .box-container {
     align-items: center;
+    /* margin-top: 5%; */
     padding: 40px 20px;
     display: flex;
     flex-direction: column;
