--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -297,9 +297,13 @@ body {
 /* --------main_layout-------- */
 
 .main-layout {
+    position: relative;
+    width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: row;
 }
+
 
 .main-container {
     width: 79vw;
