--- a/client/src/css/department.css
+++ b/client/src/css/department.css
@@ -105,15 +105,15 @@ td {
 
 /* === Column Widths for Department Table === */
 th:nth-child(1), td:nth-child(1) {
-  width: 60px;
-  text-align: center;
+  width: 20px;
+  text-align: 10%;
 }
 th:nth-child(2), td:nth-child(2) {
   text-align: center;
 }
 th:nth-child(3), td:nth-child(3),
 th:nth-child(4), td:nth-child(4) {
-  width: 60px;
+  width: 40px;
   text-align: center;
 }
 
