--- a/client/src/css/profile.css
+++ b/client/src/css/profile.css
@@ -12,7 +12,7 @@
     padding: 40px 20px;
     box-sizing: border-box;
 }
-
+/* ซ้ำ */
 .profile-header {
     display: flex;
     align-items: center;
