--- a/client/src/css/dashboard.css
+++ b/client/src/css/dashboard.css
@@ -17,6 +17,7 @@ html, body {
     min-height: 100vh;
     padding-bottom: 60px;
   }
+ /* ซ้ำ */
 .box-container {
     align-items: center;
     /* margin-top: 5%; */
