fix duplicate css

--- a/client/src/css/default.css
+++ b/client/src/css/default.css
@@ -2,11 +2,11 @@
     width: 80vw;
     height: 100vh;
     margin-left: 20vw;
-          
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+
     }
 
 @media (max-width: 768px) {
@@ -74,9 +74,27 @@ th {
       font-weight: 600;
       font-size: 14px;
     }
-
 td {
       font-size: 14px;
       color: #333;
       border-top: 1px solid #eee;
     }
+.table {
+    margin-top: 20px;
+    overflow: hidden;
+}
+
+.table th, .table td {
+   border-bottom: 1px solid #ddd;
+   padding: 20px 0px 20px 0px;
+   text-align: center;
+   font-weight: 300;
+}
+.table th {
+    font-size: small;
+    color: var(--primary-color);
+ }
+.table td {
+    font-size: small;
+    color: #939393;
+ }
