--- a/client/src/css/default.css
+++ b/client/src/css/default.css
@@ -98,3 +98,85 @@ td {
     font-size: small;
     color: #939393;
  }
+
+.search-box {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    width: 50%;
+    box-sizing: border-box;
+    padding: 5px;
+ }
+
+/* logo */
+.size-6{
+    height: 2rem;
+    color: #b4b4b4;
+    padding-right: 5px;
+ }
+/* input search bar */
+.search-input {
+    all: unset;
+    width: 100%;
+    padding: 5px;
+    border-radius: 6px;
+    font-size: 14px;
+ }
+/* filter box all */
+.filter-box {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    align-items: center;
+}
+.filter-box button {
+    padding: 6px 12px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    background-color: #fff;
+    cursor: pointer;
+    transition: border-color 0.2s;
+}
+.filter-item{
+    
+    padding: 6px 12px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    background-color: #fff;
+    cursor: pointer;
+    transition: border-color 0.2s;
+}
+.filter-item select {
+    border: none;
+    background: transparent;
+    font-size: 14px;
+    outline: none;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 4px 8px;
+}
+.filter-box label{
+    font-size: 14px;
+    color: #000000;
+    margin-right: 8px;
+}
+
+.filter-box select:focus,
+.filter-box button:focus {
+    outline: none;
+    border-color: #4d90fe;
+}
+
+.filter-box button {
+    background-color: #4d90fe;
+    color: black;
+    border: none;
+}
+
+.filter-box button:hover {
+    background-color: #357ae8;
+}
