Refactor Dashboard, LiveScreen, and Login components for improved styling and structure; integrate Tailwind CSS for consistent design; enhance user experience with responsive layouts and better error handling.

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 :root {
 --primary-color: #1A2DAC;
@@ -46,185 +46,4 @@ body {
     height: 5px;
     font-size: 5px;
 }
-
-
-
-
-
-/* -------navbar-------- */
-
-
-.navbar-box {
-    width: 21vw;
-    height: 100vh;
-    background: var(--background-gradient);
-    border-radius: 0px 40px 40px 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: fixed; 
-}
-
-.navbar {
-    display: flex;
-    flex-direction: column;
-    padding: 30px 0px 30px 0px;
-    gap: 60px;
-    color: white;
-    overflow: hidden;
-}
-
-.navbar-logo {
-    text-align: center;
-    margin: -10px 0px -40px 0px;
-}
-
-.logo-img {
-    width: 100px;
-    height: 100px;
-}
-
-.menu li{
-    list-style-type: none;
-}
-
-.main-menu {
-    padding: 15px 110px 15px 10px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    position: relative;
-}
-
-
-.menu a{
-    width: 100%;
-    margin-left: 10px;
-    color: white;
-    font-weight: 200;
-    text-decoration: none;
-    display: flex;
-    gap: 10px;
-    transition: all ease 0.5s;
-}
-
-.logout {
-    list-style-type: none;
-    text-align: center;
-    margin: 50px;
-    
-}
-.logout a{
-    color: white;
-    font-weight: 200;
-    text-decoration: none;
-    
-}
-
-
-.main-menu.active{
-    background-color: white;
-    border-radius: 30px 0px 0px 30px;
-}
-
-
-.main-menu.active:hover {
-    background-color: white;
-}
-.main-menu.active:hover a{
-    text-decoration: none;
-}
-
-.main-menu.active a{
-    color: #0B1246;
-}
-
-
-.main-menu:hover a{
-    /* text-decoration: underline; */
-    font-size: medium;
-    font-weight: 500;
-    margin-left: 30px;
-    
-}
-
-.logout:hover a{
-    text-decoration: underline;
-    
-}
-
-@media screen and (max-width: 768px) {
-    .menu-label {
-      display: none;
-    }
-
-    .main-menu {
-        padding: 15px 0px 15px 10px;
-        margin-left: 10px;
-    }
-
-    .icon {
-        font-size: 20px;
-    }
-    .navbar {
-        padding-top: 90px;
-    }
-    .logout {
-        margin: 0;
-        margin-bottom: 30px;
-    }
-
-    
-    .navbar-logo img{
-        width: 60px;
-        height: 60px;
-        margin: 30px 0px 30px 0px;
-    }
-
-  }
-
-
-
-
-/*--------Navbar curve outside---------*/
-
-/* .main-menu:hover::before, */
-.main-menu.active::before {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: -50px;
-    width: 50px;
-    height: 50px;
-    background-color: transparent;
-    border-radius: 50%;
-    pointer-events: none;
-    box-shadow: 35px 35px 0 10px white;
-}
-
-/* .main-menu:hover::after, */
-.main-menu.active::after {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom:-50px;
-    width: 50px;
-    height: 50px;
-    background-color: transparent;
-    border-radius: 50%;
-    pointer-events: none;
-    box-shadow: 35px -35px 0 10px white;
-}
-
-
-
-
-
-/* --------main_layout-------- */
-
-.main-layout {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-}
+ */
